zlib/ptlibzippy.h


typedef voidpf (*alloc_func)(voidpf opaque, uInt items, uInt size);
typedef void   (*free_func)(voidpf opaque, voidpf address);
typedef struct z_stream_s {
    z_const Bytef *next_in;     
    uInt     avail_in;  
    uLong    total_in;  
    Bytef    *next_out; 
    uInt     avail_out; 
    uLong    total_out; 
    z_const char *msg;  
    struct internal_state FAR *state; 
    alloc_func zalloc;  
    free_func  zfree;   
    voidpf     opaque;  
    int     data_type;  
    uLong   adler;      
    uLong   reserved;   
} z_stream;
typedef z_stream FAR *z_streamp;
ZEXTERN const char * ZEXPORT ptlibzippyVersion(void);
ZEXTERN int ZEXPORT deflate(z_streamp strm, int flush);
ZEXTERN int ZEXPORT deflateEnd(z_streamp strm);
ZEXTERN int ZEXPORT inflate(z_streamp strm, int flush);
ZEXTERN int ZEXPORT inflateEnd(z_streamp strm);
ZEXTERN int ZEXPORT deflateSetDictionary(z_streamp strm,
                                         const Bytef *dictionary,
                                         uInt  dictLength);
ZEXTERN int ZEXPORT deflateCopy(z_streamp dest,
                                z_streamp source);
ZEXTERN int ZEXPORT deflateReset(z_streamp strm);
ZEXTERN int ZEXPORT deflateParams(z_streamp strm,
                                  int level,
                                  int strategy);
ZEXTERN uLong ZEXPORT deflateBound(z_streamp strm, uLong sourceLen);
ZEXTERN int ZEXPORT inflateSetDictionary(z_streamp strm,
                                         const Bytef *dictionary,
                                         uInt  dictLength);
ZEXTERN int ZEXPORT inflateSync(z_streamp strm);
ZEXTERN int ZEXPORT inflateCopy(z_streamp dest,
                                z_streamp source);
ZEXTERN int ZEXPORT inflateReset(z_streamp strm);
typedef unsigned (*in_func)(void FAR *,
                            z_const unsigned char FAR * FAR *);
typedef int (*out_func)(void FAR *, unsigned char FAR *, unsigned);
ZEXTERN int ZEXPORT inflateBack(z_streamp strm,
                                in_func in, void FAR *in_desc,
                                out_func out, void FAR *out_desc);
ZEXTERN int ZEXPORT inflateBackEnd(z_streamp strm);
ZEXTERN uLong ZEXPORT ptlibzippyCompileFlags(void);
ZEXTERN int ZEXPORT compress(Bytef *dest, uLongf *destLen,
                             const Bytef *source, uLong sourceLen);
ZEXTERN int ZEXPORT compress2(Bytef *dest, uLongf *destLen,
                              const Bytef *source, uLong sourceLen,
                              int level);
ZEXTERN uLong ZEXPORT compressBound(uLong sourceLen);
ZEXTERN int ZEXPORT uncompress(Bytef *dest, uLongf *destLen,
                               const Bytef *source, uLong sourceLen);
typedef struct gzFile_s *gzFile;    
ZEXTERN gzFile ZEXPORT gzdopen(int fd, const char *mode);
ZEXTERN int ZEXPORT gzsetparams(gzFile file, int level, int strategy);
ZEXTERN int ZEXPORT gzread(gzFile file, voidp buf, unsigned len);
ZEXTERN int ZEXPORT gzwrite(gzFile file, voidpc buf, unsigned len);
ZEXTERN int ZEXPORTVA gzprintf(gzFile file, const char *format, ...);
ZEXTERN int ZEXPORTVA gzprintf();
ZEXTERN int ZEXPORT gzputs(gzFile file, const char *s);
ZEXTERN char * ZEXPORT gzgets(gzFile file, char *buf, int len);
ZEXTERN int ZEXPORT gzputc(gzFile file, int c);
ZEXTERN int ZEXPORT gzgetc(gzFile file);
ZEXTERN int ZEXPORT gzungetc(int c, gzFile file);
ZEXTERN int ZEXPORT gzflush(gzFile file, int flush);
ZEXTERN int ZEXPORT gzrewind(gzFile file);
ZEXTERN int ZEXPORT gzeof(gzFile file);
ZEXTERN int ZEXPORT gzclose(gzFile file);
ZEXTERN const char * ZEXPORT gzerror(gzFile file, int *errnum);
ZEXTERN uLong ZEXPORT adler32(uLong adler, const Bytef *buf, uInt len);
ZEXTERN uLong ZEXPORT crc32(uLong crc, const Bytef *buf, uInt len);
ZEXTERN int ZEXPORT deflateInit_(z_streamp strm, int level,
                                 const char *version, int stream_size);
ZEXTERN int ZEXPORT inflateInit_(z_streamp strm,
                                 const char *version, int stream_size);
ZEXTERN int ZEXPORT deflateInit2_(z_streamp strm, int  level, int  method,
                                  int windowBits, int memLevel,
                                  int strategy, const char *version,
                                  int stream_size);
ZEXTERN int ZEXPORT inflateInit2_(z_streamp strm, int  windowBits,
                                  const char *version, int stream_size);
ZEXTERN int ZEXPORT inflateBackInit_(z_streamp strm, int windowBits,
                                     unsigned char FAR *window,
                                     const char *version,
                                     int stream_size);
#  define deflateInit(strm, level) \
          deflateInit_((strm), (level), PTLIBZIPPY_VERSION, (int)sizeof(z_stream))
#  define inflateInit(strm) \
          inflateInit_((strm), PTLIBZIPPY_VERSION, (int)sizeof(z_stream))
#  define deflateInit2(strm, level, method, windowBits, memLevel, strategy) \
          deflateInit2_((strm),(level),(method),(windowBits),(memLevel),\
                        (strategy), PTLIBZIPPY_VERSION, (int)sizeof(z_stream))
#  define inflateInit2(strm, windowBits) \
          inflateInit2_((strm), (windowBits), PTLIBZIPPY_VERSION, \
                        (int)sizeof(z_stream))
#  define inflateBackInit(strm, windowBits, window) \
          inflateBackInit_((strm), (windowBits), (window), \
                           PTLIBZIPPY_VERSION, (int)sizeof(z_stream))
struct gzFile_s {
    unsigned have;
    unsigned char *next;
    z_off64_t pos;
};
#  define gzgetc(g) \
          ((g)->have ? ((g)->have--, (g)->pos++, *((g)->next)++) : (gzgetc)(g))
#    define gzopen gzopen64
#    define gzseek gzseek64
#    define gztell gztell64
   ZEXTERN gzFile ZEXPORT gzopen(const char *, const char *);
   ZEXTERN z_off_t ZEXPORT gzseek(gzFile, z_off_t, int);
   ZEXTERN z_off_t ZEXPORT gztell(gzFile);
ZEXTERN const char   * ZEXPORT ptError(int);
ZEXTERN int            ZEXPORT inflateSyncPoint(z_streamp);
ZEXTERN const z_crc_t FAR * ZEXPORT get_crc_table(void);